--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="template.js"></script>
+    <!-- <script src="template.js"></script> -->
 
     <title>Wonderfil</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/cover/">
@@ -30,18 +30,45 @@
             <h1 style="text-align: center;" class="cover-heading">Dispensing Demo</h1>
           </div>
 
-          <p style="text-align: center;">Please select the amount you'd like to dispense.</p>
+          <p id ="select" style="text-align: center;">Please select the amount you'd like to dispense.</p>
         
+          <!-- <div class="text-center">
+            <button id="button16" style="display:visible;" onclick="clickFunc16()">16 oz - $7.99</button>
+            <button id="button18" style="display:visible;" onclick="clickFunc18()">18 oz - $9.99</button>
+            <button id="button24" style="display:visible;" onclick="clickFunc24()">24 oz - $13.99</button>
+            <button id="stop" style="display:none;" onclick="abort = true;">STOP</button>
+          </div> -->
+
           <div class="text-center">
-            <button id="button16" onclick="clickFunc16()">16 oz</button>
-            <button id="button18" onclick="clickFunc18()">18 oz</button>
-            <button id="button24" onclick="clickFunc24()">24 oz</button>
+            <button id="button16" style="display:visible;" onclick="clickFunc16()">
+              <img src="letterA.png" id="A"/>
+              16 oz - $7.99
+            </button>
+          </div>
+
+          <div class="text-center">
+            <button id="button18" style="display:visible;" onclick="clickFunc18()">
+              <img src="letterB.png" id="B"/>
+              18 oz - $9.99
+            </button>
+          </div>
+
+          <div class="text-center">
+            <button id="button24" style="display:visible;" onclick="clickFunc24()">
+              <img src="letterC.png" id="C"/>
+              24 oz - $13.99
+            </button>
+          </div>
+
+          <div class="text-center">
+            <button id="stop" style="display:none;" onclick="abort = true;">STOP</button>
           </div>
 
           <p style="text-align: center;" id="dispensing"></p>
 
           <div class="container">
-            <h2>Current Progress: <span id="ounces"></span></h2>
+            <h2>Current Ounces: <span id="ounces"></span></h2>
+            <h2>Total Cost: <span id="price"></span></h2>
             <div class="progress">
               <div id="bar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:0%">
                 <p id="num">0%</p>
